trying to add react